--- a/package.json
+++ b/package.json
@@ -91,7 +91,5 @@
   },
   "author": "Mike Chernobrov <m.chernobrov@rambler-co.ru> (http://rambler-co.ru)",
   "license": "MIT",
-  "dependencies": {
-
-  }
+  "dependencies": {}
 }
